Part_1/log_output_before1.10/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ping-pong-log-output
spec:
  rules: 
  - http:
      paths:
      - path: /pingpong
        pathType: Prefix
        backend:
          service:
            name: kube-ping-pong-svc
            port:
              number: 2345
      - path: /
        pathType: Exact
        backend:
          service:
            name: random-strings-depl-svc
            port:
              number: 2345
